[package]
name = "csv_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
